Please see NEWS for a summary of changes since the last release suitable
for announcements.

* Sun Nov 11 2012 Thunor <thunorsif@hotmail.com>
- Changed the mandatory input file directive requirement for the pixmap
  widget and removed the Mandatory column from the wiki/reference.

* Sat Nov 10 2012 Thunor <thunorsif@hotmail.com>
- Fixed refreshing text widget with markup not showing markup.
- Fixed edit widget's text != NULL assertion Gtk-CRITICAL warning.

* Thu Nov 8 2012 Thunor <thunorsif@hotmail.com>
- Modified the table widget's output data format: now all of the columns
  are output.
- Updated the pfeme, pfontview and playmusic example applications.

* Wed Nov 7 2012 Thunor <thunorsif@hotmail.com>
- Modified the tree widget's output data format: now all of the columns
  are output in the raw state "icon-name | stock-id | data0 | data1 ..."
  whether or not icon-name or stock-id were supplied.

* Thu Nov 1 2012 Thunor <thunorsif@hotmail.com>
- Connected-up the button-press/release-event signals to the
  comboboxentry widget's child entry widget.

* Tue Oct 16 2012 Thunor <thunorsif@hotmail.com>
- Added an example application Pfeme.

* Fri Oct 12 2012 Thunor <thunorsif@hotmail.com>
- Added an example application Pfontview.

* Fri Sep 21 2012 Thunor <thunorsif@hotmail.com>
- Version 0.8.2 released (r455)

* Fri Sep 21 2012 Thunor <thunorsif@hotmail.com>
- Added an inotify alternative to the GIO file monitor which is very
  fast but unfortunately there's a 128 file descriptor limit so I've
  disabled it in configure.in.
- Fixed examples/miscellaneous/stock_icon_test: newlines in item.
- Updated the documentation.

* Thu Sep 20 2012 Thunor <thunorsif@hotmail.com>
- Removed rate-limit from docs as it means "the rate limit to which the
  monitor will report consecutive change events to the same file" and
  not the initial response time as I mistakenly thought. The initial
  response time doesn't appear to be configurable.
- Tweaked configure.in.