@@ -25,7 +25,7 @@
 /* Function prototypes */
 void button_clicked_attr(GtkWidget *button, AttributeSet *Attr);
 void button_entered_attr(GtkWidget *button, AttributeSet *Attr);
-void button_leaved_attr(GtkWidget *button, AttributeSet*Attr);
+void button_leaved_attr(GtkWidget *button, AttributeSet *Attr);
 void button_pressed(GtkWidget *button, const gchar *str);
 void button_pressed_attr(GtkWidget *button, AttributeSet *Attr);
 void button_released_attr(GtkWidget *button, AttributeSet *Attr);
